--- a/mc-common.yml
+++ b/mc-common.yml
@@ -7,8 +7,12 @@ services:
       - ${PORT:-25565}:25565
     networks:
       minecraft-net:
+      minio-net:
     dns:
       - 1.1.1.1
+    depends_on:
+      restore-backup:
+        condition: service_completed_successfully
     environment:
       ENFORCE_WHITELIST: "true"
       EULA: "true"
@@ -21,34 +25,45 @@ services:
       # use a named, managed volume for data volume
       - data:/data
 
+  # "init" container for mc to restore the data volume when empty    
+  restore-backup:
+    # Same image as mc, but any base image with bash and tar will work
+    image: itzg/mc-backup
+    restart: "no"
+    entrypoint: restore-tar-backup
+    environment:
+      UID: 1027
+      GID: 100
+    volumes:
+      # Must be same mount as mc service, needs to be writable
+      - data:/data
+
   mc-backup:
     image: itzg/mc-backup
+    networks:
+      minecraft-net:
+    depends_on:
+      mc:
+        condition: service_healthy
     environment:
-      BACKUP_METHOD: "restic"
+      UID: 1027
+      GID: 100
       BACKUP_NAME: ${WORLD_NAME:-world}
       INITIAL_DELAY: ${INITIAL_DELAY:-5m}
       BACKUP_INTERVAL: ${BACKUP_INTERVAL:-12h}
       PAUSE_IF_NO_PLAYERS: true
       PRUNE_BACKUPS_DAYS: ${PRUNE_BACKUPS_DAYS:-7}
-      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      RESTIC_HOSTNAME: ${RCON_HOST:-mc}-backup
-      RESTIC_REPOSITORY: ${RESTIC_REPOSITORY:-s3:http://minio:9000/minecraft/Backups}
-      RESTIC_PASSWORD: ${RESTIC_PASSWORD}
-      RESTIC_ADDITIONAL_TAGS: ${RESTIC_ADDITIONAL_TAGS:-mc}
-      PRUNE_RESTIC_RETENTION: ${PRUNE_RESTIC_RETENTION:- -l 5 -d 7 -w 5 -y 2}
       LINK_LATEST: "true"
       EXCLUDES: "*.jar,*.log,cache,logs"
-      TZ: "Europe/Brussels"
-      # instead of network_mode below, could declare RCON_HOST
-      RCON_HOST: ${RCON_HOST:-mc}
-      RCON_PASSWORD: ${RCON_PASSWORD}
-    restart: unless-stopped
-
-    networks:
-      minecraft-net:
-
+      RCON_HOST: mc
+      PRE_BACKUP_SCRIPT: |
+        echo "Before backup!"
+        echo "Also before backup from $$RCON_HOST to $$DEST_DIR"
+      POST_BACKUP_SCRIPT_FILE: /post-backup.sh
+      TZ: Europe/Brussels
     volumes:
       # mount the same volume used by server, but read-only
-      - data:/data
-      - restore:/restore
+      - data:/data:ro
+      - ./scripts/post-backup.sh:/post-backup.sh:ro
+      
+
