--- a/mc-common.yml
+++ b/mc-common.yml
@@ -7,7 +7,6 @@ services:
       - ${PORT:-25565}:25565
     networks:
       minecraft-net:
-      minio-net:
     dns:
       - 1.1.1.1
     depends_on:
@@ -18,14 +17,14 @@ services:
       EULA: "true"
       OVERRIDE_SERVER_PROPERTIES: "true"
       LEVEL: ${WORLD_NAME:-world}
-      TZ: "Europe/Brussels"
+      TZ: "Etc/UTC"
       RCON_PASSWORD: ${RCON_PASSWORD}
     restart: unless-stopped
     volumes:
       # use a named, managed volume for data volume
       - data:/data
 
-  # "init" container for mc to restore the data volume when empty    
+  # "init" container for mc to restore the data volume when empty
   restore-backup:
     # Same image as mc, but any base image with bash and tar will work
     image: itzg/mc-backup
@@ -34,6 +33,7 @@ services:
     environment:
       UID: 1027
       GID: 100
+      DEBUG: TRUE
     volumes:
       # Must be same mount as mc service, needs to be writable
       - data:/data
@@ -53,17 +53,32 @@ services:
       BACKUP_INTERVAL: ${BACKUP_INTERVAL:-12h}
       PAUSE_IF_NO_PLAYERS: true
       PRUNE_BACKUPS_DAYS: ${PRUNE_BACKUPS_DAYS:-7}
+      PRUNE_BACKUPS_COUNT: ${PRUNE_BACKUPS_COUNT:-14}
       LINK_LATEST: "true"
       EXCLUDES: "*.jar,*.log,cache,logs"
-      RCON_HOST: mc
+      RCON_HOST: ${RCON_HOST:-mc}
       PRE_BACKUP_SCRIPT: |
         echo "Before backup!"
         echo "Also before backup from $$RCON_HOST to $$DEST_DIR"
       POST_BACKUP_SCRIPT_FILE: /post-backup.sh
-      TZ: Europe/Brussels
+      TZ: "Etc/UTC"
     volumes:
       # mount the same volume used by server, but read-only
-      - data:/data:ro
+      - data:/data
       - ./scripts/post-backup.sh:/post-backup.sh:ro
-      
 
+  uf1:
+    networks:
+      splunknet:
+    image: ${UF_IMAGE:-splunk/universalforwarder:8.2}
+    hostname: uf-mc-${RCON_HOST}
+    environment:
+      - SPLUNK_START_ARGS=--accept-license
+      - SPLUNK_STANDALONE_URL=so1
+      - SPLUNK_DEPLOYMENT_SERVER=so1
+      - DEBUG=true
+      - SPLUNK_PASSWORD=${SPLUNK_PASSWORD}
+    volumes:
+      - data:/data
+    ports:
+      - 8089
