--- a/mc-common.yml
+++ b/mc-common.yml
@@ -45,6 +45,7 @@ services:
       RESTIC_PASSWORD:
       AWS_ACCESS_KEY_ID:
       AWS_SECRET_ACCESS_KEY:
+      TZ: "Etc/UTC"
     volumes:
       # Must be same mount as mc service, needs to be writable
       - data:/data
@@ -92,6 +93,7 @@ services:
       - SPLUNK_DEPLOYMENT_SERVER=so1
       - DEBUG=true
       - SPLUNK_PASSWORD=${SPLUNK_PASSWORD}
+      - TZ=Etc/UTC
     volumes:
       - data:/data
     ports:
